--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-    "prebuild": "dotenv -e .env -- node scripts/generateEpisodes.cjs",
+		"prebuild": "dotenv -e .env -- node scripts/generateEpisodes.cjs",
 		"dev": "vite dev",
 		"build": "npm run prebuild && vite build",
 		"preview": "npm run build && wrangler pages dev",
@@ -30,5 +30,8 @@
 		"undici": "^7.10.0",
 		"vite": "^6.2.6",
 		"wrangler": "^4.20.5"
+	},
+	"dependencies": {
+		"marked": "^15.0.12"
 	}
 }
